--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <div class="myface">
-    <img src="./myimage.jpg" alt="My image">
+    <img src="myimage.jpg" alt="My image">
   </div>
   <h1> If this guy can do something with his life, then </h1>
   <p class="para">WHY CAN'T YOU ?</p>
